[package]
name = "axum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
argon2 = "0.5.2"
async-trait = "0.1.73"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
lettre = { version = "0.11.0", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.8.5"
regex = "1.10.0"
rust_decimal = { version = "1.32.0", features = ["db-postgres"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
  "uuid",
  "chrono",
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "rust_decimal",
] }
strum = { version = "0.25.0", features = ["derive"] }
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
